# planx-crm

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/actions/lint/: action.yml
.github/workflows/: sync-planning-data-api-fetch.yml  sync-planning-data-entity.yml  sync-planning-data.yml  sync-planx-services-detailed.yml  sync-planx-services.yml  test.yml
.github/workflows/actions/lint/: action.yml
scripts/: sync-planx-services.py
src/planning-data-api-fetch/: README.md  api_helpers.py  config.py  main.py
src/planning-data-entity-sync/: README.md  api_helpers.py  config.py  main.py
src/planning-data-status/: README.md  api_helpers.py  config.py  main.py
src/sync-planx-services/: README.md  api_helpers.py  config.py  main.py
src/sync-planx-services-detailed/: README.md  api_helpers.py  main.py  sync_config.py
